syntax = "proto3";
package order;
option go_package = "github.com/ramseyjiang/go_mid_to_senior/practices/grpcgw-micros/order/gen";

import "google/api/annotations.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }

  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{UserID}"  // RESTful path params
    };
  }
}

message CreateOrderRequest {
  int64 UserID = 1;
}

message CreateOrderResponse {
  string OrderID = 1;
}

message GetOrdersRequest {
  int64 UserID = 1;
  OrderStatus Status = 2;   // filter condition（such as "status=paid"）
  SortOrder SortBy = 3;  // such as "created_at"
  int32 Page = 4;
  int32 PageSize = 5;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;  // default 0
  ORDER_STATUS_CREATED = 1;
  ORDER_STATUS_PAID = 2;
  ORDER_STATUS_SHIPPED = 3;
  ORDER_STATUS_COMPLETED = 4;
  ORDER_STATUS_CANCELED = 5;
}

enum SortOrder {
  SORT_ORDER_UNSPECIFIED = 0;
  SORT_ORDER_CREATED_AT = 1;
  SORT_ORDER_ORDER_ID = 2;
  SORT_ORDER_USER_ID = 3;
}

message GetOrdersResponse {
  repeated OrderDetail orders = 1;  // return user's order list
}

message OrderDetail {
  string OrderID = 1;
  OrderStatus Status = 2;
  int64 UserID = 3;
  int64 CreatedAt = 4;  // Using int64 to store timestamp
}